sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value getNombreValeur
  val n = getNombreValeur()
          ^AlgGnomeSort:12: error: not found: value comtpeur
      echange(comtpeur,compteur+1)
              ^